--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>EasyBank Landing Page</title>
 </head>
 <body>
-    
+    <main class="main">
+        <!-- HEADER START -->
+        <header class="header">
+            <!-- NAV START -->
+            <nav class="nav">
+
+            </nav>
+            <!-- NAV END -->
+        </header>
+        <!-- HEADER END -->
+        <!-- HOME SECTION START -->
+        <section class="home" id="home"></section>
+        <!-- HOME SECTION END -->
+
+        <!-- ABOUT SECTION START -->
+        <section class="about" id="about"></section>
+        <!-- ABOUT SECTION END -->
+
+        <!-- CONTACT SECTION START -->
+        <section class="contact" id="contact"></section>
+        <!-- CONTACT SECTION END -->
+
+        <!-- BLOG SECTION START -->
+        <section class="blog" id="blog"></section>
+        <!-- BLOG SECTION END -->
+
+        <!-- CAREERS SECTION START -->
+        <section class="careers" id="careers"></section>
+        <!-- CAREERS SECTION END -->
+
+        
+    </main>
 </body>
 </html>
