Add navbar and logo styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <!-- NAV START -->
             <nav class="nav">
-
+                <div class="logo"></div>
             </nav>
             <!-- NAV END -->
         </header>
@@ -38,7 +38,9 @@
         <section class="careers" id="careers"></section>
         <!-- CAREERS SECTION END -->
 
-        
+        <footer class="footer">
+
+        </footer>
     </main>
 </body>
 </html>
