--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             <!-- NAV START -->
             <nav class="nav">
                 <div class="logo"></div>
+                <ul>
+                    <li><a href="#home">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#contact">contact</a></li>
+                    <li><a href="#blog">blog</a></li>
+                    <li><a href="#careers">careers</a></li>
+                </ul>
             </nav>
             <!-- NAV END -->
         </header>
