Add navbar items styles

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
             <!-- NAV START -->
             <nav class="nav">
                 <div class="logo"></div>
-                <ul>
-                    <li><a href="#home">home</a></li>
-                    <li><a href="#about">about</a></li>
-                    <li><a href="#contact">contact</a></li>
-                    <li><a href="#blog">blog</a></li>
-                    <li><a href="#careers">careers</a></li>
+                <a class="btn-menu" href="#"></a>
+                <ul class="nav-list is-hidden">
+                    <li class="nav-list__items" ></li>
+                    <li class="nav-list__items" ><a href="#home">home</a></li>
+                    <li class="nav-list__items" ><a href="#about">about</a></li>
+                    <li class="nav-list__items" ><a href="#contact">contact</a></li>
+                    <li class="nav-list__items" ><a href="#blog">blog</a></li>
+                    <li class="nav-list__items" ><a href="#careers">careers</a></li>
                 </ul>
             </nav>
             <!-- NAV END -->
