--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
         <header class="header">
             <!-- NAV START -->
             <nav class="nav">
-                <div class="logo"></div>
+                
+                <div class="logo">
+                    <img src="img/logo.svg" alt="Logo">
+                </div>
+                
                 <a class="btn-menu" href="#"></a>
+
                 <ul class="nav-list is-hidden">
+
                     <li class="nav-list__items" ></li>
                     <li class="nav-list__items" ><a href="#home">home</a></li>
                     <li class="nav-list__items" ><a href="#about">about</a></li>
@@ -23,12 +29,18 @@
                     <li class="nav-list__items" ><a href="#blog">blog</a></li>
                     <li class="nav-list__items" ><a href="#careers">careers</a></li>
                 </ul>
+
             </nav>
             <!-- NAV END -->
         </header>
         <!-- HEADER END -->
         <!-- HOME SECTION START -->
-        <section class="home" id="home"></section>
+        <section class="home" id="home">
+
+            <h1 class="copy-title"> Next generation digital banking</h1>
+            <p class="copy-description">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
+
+        </section>
         <!-- HOME SECTION END -->
 
         <!-- ABOUT SECTION START -->
