--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="logo">
                     <img src="img/logo.svg" alt="Logo">
                 </div>
-                
+
                 <a class="btn-menu" href="#"></a>
 
                 <ul class="nav-list is-hidden">
@@ -39,12 +39,51 @@
 
             <h1 class="copy-title"> Next generation digital banking</h1>
             <p class="copy-description">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
+            <a class="request-info-btn" href="#">request invite</a>
 
         </section>
         <!-- HOME SECTION END -->
 
         <!-- ABOUT SECTION START -->
-        <section class="about" id="about"></section>
+        <section class="about" id="about">
+
+            <article>
+                <h2>Why choose Easybank?</h2>
+                <p class="copy-description">We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
+            </article>
+
+            <article>
+                <div class="article-img">
+                    <img src="img/icon-online.svg" alt="Payment">
+                </div>
+                <h2> Online Banking</h2>
+                <p class="copy-description">Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
+            </article>
+
+            <article>
+                <div class="article-img">
+                    <img src="img/icon-budgeting.svg" alt="Payment">
+                </div>
+                <h2>Simple Budgeting</h2>
+                <p class="copy-description">See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
+            </article>
+
+            <article>
+                <div class="article-img">
+                    <img src="img/icon-onboarding.svg" alt="Payment">
+                </div>
+                <h2>Fast Onboarding</h2>
+                <p class="copy-description">We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
+            </article>
+
+            <article>
+                <div class="article-img">
+                    <img src="img/icon-online.svg" alt="Payment">
+                </div>
+                <h2>Open API</h2>
+                <p class="copy-description">Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+            </article>
+        </section>
         <!-- ABOUT SECTION END -->
 
         <!-- CONTACT SECTION START -->
