--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="article-img">
                     <img src="img/icon-online.svg" alt="Payment">
                 </div>
-                <h2> Online Banking</h2>
+                <h3> Online Banking</h3>
                 <p class="copy-description">Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
             </article>
 
@@ -64,7 +64,7 @@
                 <div class="article-img">
                     <img src="img/icon-budgeting.svg" alt="Payment">
                 </div>
-                <h2>Simple Budgeting</h2>
+                <h3>Simple Budgeting</h3>
                 <p class="copy-description">See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
             </article>
 
@@ -72,7 +72,7 @@
                 <div class="article-img">
                     <img src="img/icon-onboarding.svg" alt="Payment">
                 </div>
-                <h2>Fast Onboarding</h2>
+                <h3>Fast Onboarding</h3>
                 <p class="copy-description">We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
             </article>
 
@@ -80,18 +80,20 @@
                 <div class="article-img">
                     <img src="img/icon-online.svg" alt="Payment">
                 </div>
-                <h2>Open API</h2>
+                <h3>Open API</h3>
                 <p class="copy-description">Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
             </article>
         </section>
         <!-- ABOUT SECTION END -->
 
         <!-- CONTACT SECTION START -->
-        <section class="contact" id="contact"></section>
+       <!-- <section class="contact" id="contact"></section>-->
         <!-- CONTACT SECTION END -->
 
         <!-- BLOG SECTION START -->
-        <section class="blog" id="blog"></section>
+        <section class="blog" id="blog">
+
+        </section>
         <!-- BLOG SECTION END -->
 
         <!-- CAREERS SECTION START -->
