Add footer section

--- a/index.html
+++ b/index.html
@@ -134,10 +134,36 @@
         <!-- BLOG SECTION END -->
 
         <!-- CAREERS SECTION START -->
-        <section class="careers" id="careers"></section>
+        <!-- -><section class="careers" id="careers"></section>-->
         <!-- CAREERS SECTION END -->
 
         <footer class="footer">
+            <div class="footer-container">
+
+                <div class="logo">
+                    <img src="img/logo.svg" alt="Logo">
+                </div>
+
+                <div class="social">
+                    <a href="#" class="social-links"><img src="img/icon-facebook.svg" alt="Facebook"></a>
+                    <a href="#" class="social-links"> <img src="img/icon-youtube.svg" alt="Youtube"></a>                    <a href="#" class="social-links"> <img src="img/icon-twitter.svg" alt="Facebook"></a>                    <a href="#" class="social-links"> <img src="img/icon-pinterest.svg" alt="Pinterest"></a>                    <a href="#" class="social-links"> <img src="img/icon-instagram.svg" alt="Instagram"></a>
+                </div>
+                <nav class="nav-footer">
+
+                    <ul class="nav-list-footer">
+    
+                        <li class="nav-list__items-footer" ><a href="#about">about us</a></li>
+                        <li class="nav-list__items-footer" ><a href="#contact">contact</a></li>
+                        <li class="nav-list__items-footer" ><a href="#blog">blog</a></li>
+                        <li class="nav-list__items-footer" ><a href="#careers">careers</a></li>
+                        <li class="nav-list__items-footer" ><a href="#support">support</a></li>
+                        <li class="nav-list__items-footer" ><a href="#privacy">privacy policy</a></li>
+                    </ul>
+    
+                </nav>
+                <a class="request-info-btn" href="#">request invite</a>
+                <small>© Easybank. All Rights Reserved</small>
+            </div>
 
         </footer>
     </main>
