--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- HEADER END -->
         <!-- HOME SECTION START -->
         <section class="home" id="home">
-
+            <div class="home-bg"></div>
             <h1 class="copy-title"> Next generation digital banking</h1>
             <p class="copy-description">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
             <a class="request-info-btn" href="#">request invite</a>
