--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <!-- ABOUT SECTION START -->
         <section class="about" id="about">
 
-            <article>
-                <h2>Why choose Easybank?</h2>
+            <article class="info-articles">
+                <h2 class="about-title" >Why choose Easybank?</h2>
                 <p class="copy-description">We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
             </article>
 
-            <article>
+            <article class="info-articles">
                 <div class="article-img">
                     <img src="img/icon-online.svg" alt="Payment">
                 </div>
@@ -60,7 +60,7 @@
                 <p class="copy-description">Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
             </article>
 
-            <article>
+            <article class="info-articles">
                 <div class="article-img">
                     <img src="img/icon-budgeting.svg" alt="Payment">
                 </div>
@@ -68,7 +68,7 @@
                 <p class="copy-description">See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
             </article>
 
-            <article>
+            <article class="info-articles">
                 <div class="article-img">
                     <img src="img/icon-onboarding.svg" alt="Payment">
                 </div>
@@ -76,7 +76,7 @@
                 <p class="copy-description">We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
             </article>
 
-            <article>
+            <article class="info-articles">
                 <div class="article-img">
                     <img src="img/icon-api.svg" alt="Payment">
                 </div>
