--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="blog-img">
                     <img src="img/image-currency.jpg" alt="currency">
                 </div>
-                <small>By Claire Robinson</small>
+                <small class="small-copy">By Claire Robinson</small>
                 <h3>Receive money in any currency with no fees</h3>
                 <p>The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
             </article>
@@ -107,7 +107,7 @@
                 <div class="blog-img">
                     <img src="img/image-restaurant.jpg" alt="Dinner">
                 </div>
-                <small>By Wilson Hutton</small>
+                <small class="small-copy">By Wilson Hutton</small>
                 <h3>Treat yourself without worrying about money</h3>
                 <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
             </article>
@@ -116,7 +116,7 @@
                 <div class="blog-img">
                     <img src="img/image-plane.jpg" alt="Plane">
                 </div>
-                <small>By Wilson Hutton</small>
+                <small class="small-copy">By Wilson Hutton</small>
                 <h3>Take your Easybank card wherever you go</h3>
                 <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
             </article>
@@ -125,7 +125,7 @@
                 <div class="blog-img">
                     <img src="img/image-confetti.jpg" alt="Confeti">
                 </div>
-                <small>By Claire Robinson</small>
+                <small class="small-copy">By Claire Robinson</small>
                 <h3>Our invite-only Beta accounts are now live!</h3>
                 <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
             </article>
