Add blog cards styles

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <small class="small-copy">By Claire Robinson</small>
                 <h3>Receive money in any currency with no fees</h3>
-                <p>The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+                <p class="copy-description">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
             </article>
             
             <article class="blog-articles">
@@ -109,7 +109,7 @@
                 </div>
                 <small class="small-copy">By Wilson Hutton</small>
                 <h3>Treat yourself without worrying about money</h3>
-                <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+                <p class="copy-description">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
             </article>
 
             <article class="blog-articles">
@@ -118,7 +118,7 @@
                 </div>
                 <small class="small-copy">By Wilson Hutton</small>
                 <h3>Take your Easybank card wherever you go</h3>
-                <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+                <p class="copy-description">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
             </article>
 
             <article class="blog-articles">
@@ -127,7 +127,7 @@
                 </div>
                 <small class="small-copy">By Claire Robinson</small>
                 <h3>Our invite-only Beta accounts are now live!</h3>
-                <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+                <p class="copy-description">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
             </article>
 
         </section>
