Add footer  styles

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     
                 </nav>
                 <a class="request-info-btn" href="#">request invite</a>
-                <small>© Easybank. All Rights Reserved</small>
+                <small class="copy-footer">© Easybank. All Rights Reserved</small>
             </div>
 
         </footer>
