Add toggle event to navbar btn

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <img src="img/logo.svg" alt="Logo">
                 </div>
 
-                <a class="btn-menu" href="#"></a>
+                <a class="btn-menu" href="#" id="btn"></a>
 
-                <ul class="nav-list is-hidden">
+                <ul class="nav-list is-hidden" id="navbar">
 
                     <li class="nav-list__items" ></li>
                     <li class="nav-list__items" ><a href="#home">home</a></li>
@@ -167,5 +167,6 @@
 
         </footer>
     </main>
+    <script src="js/index.js"></script>
 </body>
 </html>
